--- a/AIQuizzer/src/main/resources/application.properties
+++ b/AIQuizzer/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=AIQuizzer
 server.port=8081
 
 # Database Configuration (uses ENV vars with local fallback)
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/aiquizzer}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5433/AiQuizGenerator}
 spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASS:Setpass99}
+spring.datasource.password=${DB_PASS:Shrut@1210}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
@@ -24,7 +24,7 @@ jwt.secret = 9s@8F*G3tVqZrLmXc2WvBtNpQeYuIwOe
 #email - handler
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vrajkundariya9876@gmail.com
+spring.mail.username=shrutsutariya011@gmail.com
 spring.mail.password=rtplpwykcbgvtpvx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
